# Load-Balencing-for-Massive-CCTV-Task

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CaptureCamera.cpp  FeedManager.cpp  Input_Reader.cpp  Makefile  README.md  Requester.cpp  ServerProgram.cpp  cmake_install.cmake  main.cpp  mainServer
CPUDUMPER/: cpu_dump.csv  prog.py
CPU_Controller/: cpu_usage.cpp  main.cpp
Camera Reader/: CMakeLists.txt  out.csv  server.cpp
Camera Server/: client.py  log.txt  log2.txt  log3.txt  server.cpp
Cleaned/MainServer/: DataFile.csv  MainApp.py  config.json  cvapp.py  pyobject.py  server  subprocessapp.py  tmp.py
Cleaned/SubServer/: SubApp.py  config.json
Cleaned/cpp/: .fuse_hidden0002a6b70000000e  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  server  server.cpp  servere.cpp
Cleaned/subapp/: server  server.cpp
Cleaned/viewer/: DataFile.csv  readCSV.py
Cleaned/viewer/pager/: package-lock.json  package.json
Cleaned/viewer/pager/src/: App.js
Cleaned/viewer/pager/src/Component/: Home.js
Cleaned/viewer/pager/src/Component/Camera/: Add.js  AddStyle.css  Table.js  Tables.js  subForm.js
Cleaned/viewer/pager/src/Component/Server/: AddServer.js  Chart.js  Tables.js
Display/: CMakeLists.txt  Detector1.cpp  Makefile  PeopleDetect.cpp  client  client.cpp  cpu_usage.cpp  ipRead.py
FYPwithPython/: Controller.py  LoadBanlencer.py  LoadBanlencerServe.py  a.out  application.py  cvapp.py  middleware  pyobject.py  ser.py  server  subcode.cpp
FYPwithPython/MainServer/: MainApp.py  pyobject.py  server
FYPwithPython/Server Controller/: Main.py
FYPwithPython/SubServer/: SubApp.py  server
FYPwithPython/static/js/: application.js  application1.js
FYPwithPython/templates/: index.html
FaceDetection/: CMakeLists.txt  faceDetect.cpp  human.cpp
Filter/: CMakeLists.txt  server  server.cpp
FindDiff/: CMakeLists.txt  Diffrence.cpp  ImgDiffCuda.cpp
GPU/: GpuManager.cpp
HDA/: server  server copy.cpp  server.cpp
Main Server/: CMakeLists.txt  DataFile.csv  aplication.py  config.json  mainServer.cpp  pyobject.py  test.cpp
Middleware/: CMakeLists.txt  Diffrence.cpp  ImgDiffCuda.cpp  cascade.cpp  middleware  middleware.cpp  middlewareoop.cpp
Sub Server/: CMakeLists.txt  aplication.py  config.json  main (copy).cpp  main.cpp  subServer.cpp
Sub Server/algorithems/: cascade.cpp
Sub Server/classifires/: haarcascade_smile.xml
Viewer/: package-lock.json  package.json
Viewer/src/: App.js
Viewer/src/Component/: Rtsp.js  timing.js
Viewer/src/Component/Camera/: AddStyle.css  Table.js
Viewer/src/Component/Server/: AddServer.js  Char.js  Chart.js  Result.js  Tables.js
inputs/: SelectCamera.cpp
