cmake_minimum_required(VERSION 3.1)
# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
#set(CMAKE_WITH_CUDA FALSE)
set(CMAKE_WITH_CUDA TRUE)
project( subServer )
find_package(jsoncpp CONFIG REQUIRED)
find_package( OpenCV REQUIRED PATHS "/home/chathuranga/Public/FYP/opencv/installation/OpenCV-master")
SET(OpenCV_DIR /home/chathuranga/Public/FYP/opencv/installation/OpenCV-master/lib/cmake/opencv4)
add_executable(subServer main.cpp)
# add_executable( middleware server.cpp )
target_link_libraries( subServer ${OpenCV_LIBS}  jsoncpp_lib)
SET(CMAKE_THREAD_LIBS_INIT "${CMAKE_THREAD_LIBS_INIT} -std=c++11 -pthread")

target_link_libraries( subServer ${CMAKE_THREAD_LIBS_INIT} )
